syntax = "proto3";
package sonrio.sonr.bucket;
import "bucket/bucket.proto";
import "bucket/which_is.proto";
import "registry/who_is.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sonr-io/blockchain/x/bucket/types";

// Msg defines the Msg service.
service Msg {
  // CreateBucket
  //
  // CreateBucket defines a new collection on the bucket module of the blockchain.
  rpc CreateBucket(MsgCreateBucket) returns (MsgCreateBucketResponse);

  // UpdateBucket
  //
  // UpdateBucket updates existing collection on the bucket module of the blockchain.
  rpc UpdateBucket(MsgUpdateBucket) returns (MsgUpdateBucketResponse);

  // DeactivateBucket
  //
  // DeactivateBucket deactivates existing collection on the bucket module of the blockchain.
  rpc DeactivateBucket(MsgDeactivateBucket) returns (MsgDeactivateBucketResponse);

  // CreateWhichIs
  //
  // CreateWhichIs method creates a new BucketDoc record for the bucket module.
  rpc CreateWhichIs(MsgCreateWhichIs) returns (MsgCreateWhichIsResponse);

  // UpdateWhichIs
  //
  // UpdateWhichIs method updates an existing BucketDoc from the bucket store.
  rpc UpdateWhichIs(MsgUpdateWhichIs) returns (MsgUpdateWhichIsResponse);

  // DeleteWhichIs
  //
  // DeleteWhichIs method deletes an existing BucketDoc from the bucket store.
  rpc DeleteWhichIs(MsgDeleteWhichIs) returns (MsgDeleteWhichIsResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateBucket {
  string creator = 1;
  string label = 2;
  string description = 3;
  string kind = 4;

  // Authenticated user session data
  sonrio.sonr.registry.Session session = 5;

  // Provided initial objects for the bucket
  repeated string initial_object_dids = 6;
}

message MsgCreateBucketResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // Whichis response of the ObjectDoc
    WhichIs which_is = 3;
}

message MsgUpdateBucket {
  string creator = 1;

  // The Bucket label
  string label = 2;

  // New bucket description
  string description = 3;

  // Session data of authenticated user
  sonrio.sonr.registry.Session session = 4;

  // Added Objects
  repeated string added_object_dids = 5;

  // Removed Objects
  repeated string removed_object_dids = 6;
}

message MsgUpdateBucketResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;

    // Whichis response of the ObjectDoc
    WhichIs which_is = 3;
}

message MsgDeactivateBucket {
  string creator = 1;
  string did = 2;
  sonrio.sonr.registry.Session session = 3;
}

message MsgDeactivateBucketResponse {
    // Code of the response
    int32 code = 1;

    // Message of the response
    string message = 2;
}

message MsgCreateWhichIs {
  string creator = 1;
  string did = 2;
  BucketDoc bucket = 3;
}
message MsgCreateWhichIsResponse {}

message MsgUpdateWhichIs {
  string creator = 1;
  string did = 2;
  BucketDoc bucket = 3;
}
message MsgUpdateWhichIsResponse {}

message MsgDeleteWhichIs {
  string creator = 1;
  string did = 2;
}
message MsgDeleteWhichIsResponse {}

// this line is used by starport scaffolding # proto/tx/message
